Cognitive Foundry 3.3.1.