@@ -15,23 +15,21 @@
 package gov.sandia.cognition.collection;
 
 import gov.sandia.cognition.annotation.CodeReview;
+import gov.sandia.cognition.util.ArgumentChecker;
 import gov.sandia.cognition.util.CloneableSerializable;
+import gov.sandia.cognition.util.ObjectUtil;
 import java.util.AbstractList;
+import java.util.Arrays;
 import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.NoSuchElementException;
+import java.util.ListIterator;
 
 /**
- * A finite capacity buffer backed by a LinkedList.  One can add and remove
+ * A finite capacity buffer backed by a fixed array.  One can add and remove
  * from the buffer, but the size will never be greater than the capacity.
- * The running times are equal to those of a LinkedList.
+ * The running times are constant, except for removing in the middle
+ * of the list, which may require a relatively expensive copy/shift.
+ * This is essentially a circular array-back list.
  * 
- * We use a LinkedList instead of an ArrayList because when the buffer is full,
- * we push something onto the end of the queue and remove an element from
- * the beginning.  If we used an ArrayList, this would consume a lot of
- * computation and needless memory allocation.  Whereas, a LinkedList simply
- * appends an element and pops one off in constant time.
- *
  * @param <DataType> Type of data contained in the buffer
  * @author Kevin R. Dixon
  * @since  2.0
@@ -50,18 +48,21 @@ public class FiniteCapacityBuffer<DataType>
     extends AbstractList<DataType>
     implements CloneableSerializable
 {
-// TODO: Should be implemented using an array instead of a linked list.
-// - jdbasil (2009-07-10)
-
-    /**
-     * Maximum capacity of the buffer.
-     */
-    private int capacity;
 
     /**
      * Underlying data in the buffer
      */
-    private LinkedList<DataType> data;
+    private Object[] data;
+
+    /**
+     * Location of element 0
+     */
+    private int head;
+
+    /**
+     * Number of items in the list
+     */
+    private int size;
 
     /**
      * Default constructor with capacity of one.
@@ -77,10 +78,12 @@ public class FiniteCapacityBuffer<DataType>
      * @param   capacity
      *      Maximum capacity of the buffer.
      */
+    @SuppressWarnings("unchecked")
     public FiniteCapacityBuffer(
         int capacity)
     {
-        this.data = new LinkedList<DataType>();
+        this.data = new Object[ 0 ];
+        this.head = 0;
         this.setCapacity(capacity);
     }
 
@@ -94,7 +97,7 @@ public class FiniteCapacityBuffer<DataType>
         FiniteCapacityBuffer<DataType> other)
     {
         this(other.getCapacity());
-        this.addAll(other.data);
+        this.addAll(other);
     }
 
     @Override
@@ -105,8 +108,7 @@ public class FiniteCapacityBuffer<DataType>
             @SuppressWarnings(value = "unchecked")
             FiniteCapacityBuffer<DataType> clone =
                 (FiniteCapacityBuffer<DataType>) super.clone();
-            clone.setCapacity(this.capacity);
-            clone.addAll(this.data);
+            clone.data = ObjectUtil.cloneSmartArrayAndElements(this.data);
             return clone;
         }
         catch (CloneNotSupportedException ex)
@@ -115,21 +117,22 @@ public class FiniteCapacityBuffer<DataType>
         }
     }
 
+    @Override
     public int size()
     {
-        return this.data.size();
+        return this.size;
     }
 
     @Override
     public Iterator<DataType> iterator()
     {
-        return this.data.iterator();
+        return new InternalIterator();
     }
 
     /**
      * Appends the element to the end of the buffer, removing excess elements
      * if necessary
-     * @param e 
+     * @param e
      * DataType to addLast to the buffer
      * @return true if successful, false if unable to add
      */
@@ -144,51 +147,151 @@ public class FiniteCapacityBuffer<DataType>
     public boolean remove(
         Object o)
     {
-        return this.data.remove(o);
+
+        DataType retval = null;
+        for( int i = 0; i < this.size; i++ )
+        {
+            Object vi = this.get(i);
+            if( vi.equals(o) )
+            {
+                retval = this.remove(i);
+                break;
+            }
+        }
+
+        return retval != null;
     }
 
     @Override
     public DataType remove(
-        int index)
+        final int index)
     {
-        return this.data.remove(index);
+        ArgumentChecker.assertIsInRangeInclusive("index", index, 0, this.size-1);
+        final int pos = this.convert(index);
+
+        @SuppressWarnings("unchecked")
+        DataType retval = (DataType) this.data[pos];
+
+        this.data[pos] = null;
+
+        // We just removed the first thing in the list, so just
+        // move the head forward
+        if( index == 0 )
+        {
+            this.head = this.convert(1);
+        }
+
+        // If you removed the final thing in the list, then there's nothing
+        // left to do
+        else if( index == this.size-1 )
+        {
+
+        }
+
+        // You removed something in the middle of the list, so we need to
+        // move things around
+        else
+        {
+
+            // If the list wraps around, then we need to recopy the entire thing
+            final int tail = this.convert(this.size-1);
+
+            // If the tail is "above" the removed element, then just copy
+            // from that element onward
+            if( pos < tail )
+            {
+                System.arraycopy( this.data, pos+1, this.data, pos, tail-pos );
+            }
+
+            // Uh-oh... the pos is "above" the tail, which means we're in a
+            // wrapped around state... this is harder.
+            else
+            {
+                for( int i = index; i < this.size-1; i++ )
+                {
+                    this.set(i, this.get(i+1) );
+                }
+            }
+
+        }
+
+        this.size--;
+
+        return retval;
+    }
+
+    /**
+     * Converts the given index from zero-based world to circular world
+     * @param index
+     * Index to convert to circular world
+     * @return
+     * Circular world index
+     */
+    protected int convert(
+        int index )
+    {
+        final int capacity = this.getCapacity();
+        int pos = (index+this.head) % this.getCapacity();
+        while( pos < 0 )
+        {
+            pos += capacity;
+        }
+        return pos;
+    }
+
+    @Override
+    public void clear()
+    {
+        Arrays.fill( this.data, null );
+        this.size = 0;
+        this.head = 0;
     }
 
     /**
      * Prepend the element to the beginning of the buffer, removing excess
      * elements if necessary
-     * @param e 
+     * @param e
      * DataType to addFirst to the buffer
      * @return true if successful, false if unable to add
      */
     public boolean addFirst(
         DataType e)
     {
-        while (this.size() >= this.getCapacity())
+
+        // Ensure we've got at least one free slot
+        final int capacity = this.getCapacity();
+        if( this.size >= capacity )
         {
-            this.data.removeLast();
+            this.size = capacity-1;
         }
 
-        this.data.addFirst(e);
+        // We should have at least
+        this.head = this.convert(-1);
+        this.data[this.head] = e;
+        this.size++;
         return true;
     }
 
     /**
      * Appends the element to the end of the buffer, removing excess elements
      * if necessary
-     * @param e 
+     * @param e
      * DataType to add to the buffer
      * @return true if successful, false if unable to add
      */
     public boolean addLast(
         DataType e)
     {
-        while (this.size() >= this.getCapacity())
+        // Ensure we've got at least one free slot
+        final int capacity = this.getCapacity();
+        if( this.size >= capacity )
         {
-            this.data.removeFirst();
+            this.head = this.convert(1);
+            this.size = capacity-1;
         }
-
-        this.data.addLast(e);
+        final int tail = this.convert(this.size);
+        this.data[tail] = e;
+        this.size++;
         return true;
     }
 
@@ -197,12 +300,10 @@ public class FiniteCapacityBuffer<DataType>
      *
      * @return
      *      The first element in the list.
-     * @throws  NoSuchElementException
-     *      If the list is empty.
      */
     public DataType getFirst()
     {
-        return this.data.getFirst();
+        return this.get(0);
     }
 
     /**
@@ -210,12 +311,10 @@ public class FiniteCapacityBuffer<DataType>
      *
      * @return
      *      The last element in the list.
-     * @throws  NoSuchElementException
-     *      If the list is empty.
      */
     public DataType getLast()
     {
-        return this.data.getLast();
+        return this.get(this.size-1);
     }
 
     /**
@@ -239,7 +338,7 @@ public class FiniteCapacityBuffer<DataType>
      */
     public int getCapacity()
     {
-        return this.capacity;
+        return this.data.length;
     }
 
     /**
@@ -252,24 +351,131 @@ public class FiniteCapacityBuffer<DataType>
     public void setCapacity(
         int capacity)
     {
-        if (capacity <= 0)
+        ArgumentChecker.assertIsPositive("capacity", capacity);
+
+        Object[] newData = new Object[ capacity ];
+        if( this.data != null )
         {
-            throw new IllegalArgumentException(
-                "Capacity (" + capacity + ") must be > 0");
+            // Copy over all the old elements if we're growing the buffer
+            int max = Math.min( this.size, capacity );
+            for( int i = 0; i < max; i++ )
+            {
+                // I'm sure there's a clever way to use System.arraycopy here,
+                // but it doesn't seem worth the effort
+                newData[i] = this.get(i);
+            }
+            this.size = max;
+        }
+        else
+        {
+            this.size = 0;
         }
 
-        this.capacity = capacity;
-
-// TODO: Should setting the capacity clear out the buffer as well or only
-// grow/shrink it to the proper size? - jdbasil (2009-07-10)
-        this.data = new LinkedList<DataType>();
+        this.data = newData;
+        this.head = 0;
     }
 
     @Override
+    @SuppressWarnings("unchecked")
     public DataType get(
         int index)
     {
-        return this.data.get(index);
+        ArgumentChecker.assertIsInRangeInclusive("index", index, 0, this.size-1);
+        return (DataType) this.data[this.convert(index)];
+    }
+
+    @Override
+    public DataType set(
+        int index,
+        DataType element)
+    {
+        ArgumentChecker.assertIsInRangeInclusive("index", index, 0, this.size-1);
+        int pos = this.convert(index);
+        @SuppressWarnings("unchecked")
+        DataType oldValue = (DataType) this.data[pos];
+
+        this.data[pos] = element;
+        return oldValue;
+    }
+
+    /**
+     * Iterator for FiniteCapacityBuffer
+     */
+    protected class InternalIterator
+        implements ListIterator<DataType>
+    {
+
+        /**
+         * Index of the last value retrieved
+         */
+        private int index;
+
+        /**
+         * Default constructor
+         */
+        public InternalIterator()
+        {
+            this.index = -1;
+        }
+
+        @Override
+        public boolean hasNext()
+        {
+            return this.index < size-1;
+        }
+
+        @Override
+        public DataType next()
+        {
+            this.index++;
+            return get(this.index);
+        }
+
+        @Override
+        public void remove()
+        {
+            FiniteCapacityBuffer.this.remove(this.index);
+            this.index--;
+        }
+
+        @Override
+        public boolean hasPrevious()
+        {
+            return (this.index > 0) && (size > 0);
+        }
+
+        @Override
+        public DataType previous()
+        {
+            return get(this.index);
+        }
+
+        @Override
+        public int nextIndex()
+        {
+            return this.index+1;
+        }
+
+        @Override
+        public int previousIndex()
+        {
+            return this.index;
+        }
+
+        @Override
+        public void set(
+            DataType o)
+        {
+            FiniteCapacityBuffer.this.set(this.index+1, o);
+        }
+
+        @Override
+        public void add(
+            DataType o)
+        {
+            FiniteCapacityBuffer.this.add(this.index, o);
+        }
+
     }
 
 }
